// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleDrawing actions should be initialized first 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="none"
    shapeMarkers={0}
  />
  <ShapeSummary
    onClearDrawing={[Function]}
    shapeDistanceTxt=""
    shapeMarkers={0}
  />
</section>
`;

exports[`ToggleDrawing actions should save previous markers and trigger cancel when line has been drawn 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="none"
    shapeMarkers={2}
  />
  <ShapeSummary
    onClearDrawing={[Function]}
    shapeDistanceTxt="1.89 km"
    shapeMarkers={2}
  />
</section>
`;

exports[`ToggleDrawing actions should save previous markers and trigger cancel when polygon has been drawn 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="none"
    shapeMarkers={3}
  />
  <ShapeSummary
    onClearDrawing={[Function]}
    shapeDistanceTxt="2.18 km"
    shapeMarkers={3}
  />
</section>
`;

exports[`ToggleDrawing actions should turn drawing on and off when drawing mode has switched 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="draw"
    shapeMarkers={0}
  />
  <ShapeSummary
    onClearDrawing={[Function]}
    shapeDistanceTxt=""
    shapeMarkers={0}
  />
</section>
`;

exports[`ToggleDrawing actions should turn drawing on and off when drawing mode has switched 2`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="none"
    shapeMarkers={0}
  />
  <ShapeSummary
    onClearDrawing={[Function]}
    shapeDistanceTxt=""
    shapeMarkers={0}
  />
</section>
`;

exports[`ToggleDrawing rendering should render points available almost max points drawn 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="bar"
    shapeMarkers={10}
  />
  <ShapeSummary
    onClearDrawing={[Function]}
    shapeDistanceTxt=""
    shapeMarkers={10}
  />
  <PointsAvailable
    drawingMode="bar"
    markersLeft={2}
  />
</section>
`;

exports[`ToggleDrawing rendering should render points available, shape summary and toggle drawing 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="none"
    shapeMarkers={0}
  />
  <ShapeSummary
    onClearDrawing={[Function]}
    shapeDistanceTxt=""
    shapeMarkers={0}
  />
</section>
`;
